[project]
name = "europe"
version = "0.1.0"
description = "a collection of european states"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "sparta",
    "athens",
    "carthage",
    "rome",
]

[tool.uv.sources]
sparta = { path = 'sparta/' }
athens = { path = 'athens/' }
carthage = { path = 'carthage/' }
rome = { path = 'rome/' }
