[project]
name = "europe"
version = "0.2.0"
description = "a collection of european states"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "rome",
]

[project.optional-dependencies]
greece = [
    "sparta",
    "athens",
]
punic = [
    "carthage",
]

[tool.uv.sources]
sparta = { path = 'sparta/' }
athens = { path = 'athens/' }
carthage = { path = 'carthage/' }
rome = { path = 'rome/' }
